--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,4 +1,9 @@
-//@font-face{
-//  font-family: 'Cera Pro Black';
-//  src: url(fonts/CeraPro-Black.woff2) format('woff2')
-//}
+// @font-face {
+//   font-family: "Montserrat";
+//   src: url(fonts/Montserrat-LightItalic.ttf) format("truetype");
+//   font-weight: 400;
+//   font-style: italic;
+// }
+
+:root {
+}
