--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -1,17 +1,148 @@
-@import 'var';
-@import 'mix';
+@import "var";
+@import "mix";
 
-html, body {
+html,
+body {
   min-height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
   padding: 0;
   margin: 0;
   border: 0;
-  color: white;
-  box-sizing: border-box;
+  overflow-x: hidden;
   overflow-y: auto;
-  @include mid(){
+  @include mid() {
     height: calc(var(--vh, 1vh) * 100);
-    overflow: hidden;
+  }
+}
+
+body {
+  background-image: url(/img/loading.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+* {
+  user-select: none;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+}
+
+main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: inherit;
+  height: inherit;
+  top: 0;
+  opacity: 0;
+  position: absolute;
+  & > * {
+    width: 100%;
+    flex-shrink: 0;
+  }
+
+  &.--loaded {
+    transition: opacity 0.15s linear;
+    opacity: 1;
+  }
+}
+
+section,
+footer {
+  position: relative;
+  z-index: 1;
+  .content {
+    @include mid {
+      max-width: 1000px;
+      padding-inline: 10px;
+    }
+    &.--regular {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 20px;
+      margin-top: 100px;
+      gap: 20px;
+      & > * {
+        width: 100%;
+      }
+      @include mid {
+        margin-inline: auto;
+        margin-top: 70px;
+        gap: 50px;
+      }
+      #title {
+        height: 50px;
+        background-image: url(/img/mission-text-mobile.svg);
+        background-repeat: no-repeat;
+        background-size: auto 100%;
+        background-position: center;
+        @include mid {
+          background-image: url(/img/mission-text-desktop.svg);
+          height: 38px;
+        }
+      }
+      .text {
+        line-height: 28px;
+        font-size: 14px;
+        color: black;
+        text-align: center;
+        @include mid {
+          line-height: 40px;
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+#record-logo {
+  background-image: url(/img/record-logo.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.red-title {
+  font-size: "Proxima Nova";
+  font-weight: 800;
+  user-select: none;
+  background-color: var(--underline);
+  width: fit-content;
+  display: inline-block;
+  padding: 6px;
+  border-radius: 4px;
+  @include mid {
+    padding: 8px;
+  }
+}
+
+.button {
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: white;
+  background-color: var(--blue);
+  height: 44px;
+  border-radius: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transition: opacity 0.15s linear;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.--mobile {
+  @include mid {
+    display: none;
+  }
+}
+.--desktop {
+  display: none;
+  @include mid {
+    display: inline-block;
   }
 }
